--- a/css/style_main.scss
+++ b/css/style_main.scss
@@ -265,6 +265,12 @@ width: 100%;
         gap: 7rem;
     }
 }
+@media (max-width: 380px) and (min-width: 1px){
+    .button__post{
+        display: none;
+    }
+   
+}
 /*sponsors cards section*/
 .section__navSide_sponsor_title1{
     background-color: rgb(255, 255, 255);
@@ -486,135 +492,6 @@ width: 100%;
 }
 .menu_login a:nth-of-type(2){
     font-size: .9rem;
-}
-/*nav side index post*/
-.section__navSide_post{
-    z-index: 1;
-    position: absolute;
-    background-color: white;
-    height: 100%;
-    width: 20rem;
-    left: 0%;
-    top: 0%;
-    padding: 1rem  0rem 0rem 2rem;
-    box-shadow: 0 0 0 1000vmax rgba(0, 0, 0, .5);
-    display: none;
-}
-.title_mobile_post{
-        display: flex;
-        font-weight: bold;
-        padding-right: 1rem;
-        justify-content: space-between;
-        align-content: center;
-        height: 1rem;
-        margin-bottom: 2rem;
-}
-#navlateralClose_post{
-    border: none;
-    background: none;
-    font-weight: bolder;
-    cursor: pointer;
-}
-.section__navSide_section1_post{
-    align-items: center;
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    padding-left: 0rem;
-}
-.section__navSide_section1_post a{
-    align-items: center;
-    display: flex;
-    font-family: Arial, Helvetica, sans-serif;
-    gap: .9rem;
-    text-decoration: none;
-    color: black;
-    font-size: 1rem;
-}
-.section__navSide_section1_post img{
-    width: 1.3rem;
-}
-.section__navSide_section1_post a:hover{
-    background-color: rgb(236, 236, 254);
-    border-radius: 7px;
-    color: blue ;
-    cursor: pointer;
-    text-decoration-line: underline;
-}
-.other_post{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.2rem;
-    font-weight:bold;
-    margin-top: 2rem;
-    padding-left: 0rem;
-}
-.section__navSide_section2_post{
-    gap: 1rem;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    display: grid;
-    margin-top: .9rem;
-    padding-left: 0rem;
-}
-.section__navSide_section2_post img{
-    width: 1.3rem;
-}
-.section__navSide_section2_post a{
-    align-items: center;
-    display: flex;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    text-decoration: none;
-    color: black;
-    gap: .9rem;
-}
-.section__navSide_section2_post a:hover{
-     background-color: rgb(236, 236, 254);
-     border-radius: 7px;
-     color: blue ;
-     cursor: pointer;
-     text-decoration-line: underline;
-}
- .section__navSide_networks_post{
-    display: flex;
-    gap: 18px;  
-    padding-top: 42px;
-    margin-left: 0rem;
-}
- .section__navSide_networks_post a:hover{
-    cursor: pointer;
-    background-color: rgb(228, 228, 249);
-    border-radius: 7px;
-}
-.section__navSide_networks_post img{
-    width: 27px;
-}
-@media (max-width: 767px) and (min-width: 0px){
-    #navSide_post.openNavPost{
-        display: block;
-    }
-}
-//*navbar login view*//
-.nav_bar_conteiner_login_one{
-    display: flex;
-    gap: .5rem;
-}
-.lod_in_log{
-    background: none;
-    border: none;
-    font-weight: lighter;
-    width: 5rem;
-}
-.lod_in_log:hover{
-    background-color: rgb(234, 234, 255);
-    text-decoration: underline;
-    border-radius: 12%;
-    color: rgb(104, 104, 252);
-}
-.create_post_log{
-    width: 8.5rem;
-    font-weight: 400;
 }
 //* *//
 .all-icons a:hover{
