--- a/css/style_main.scss
+++ b/css/style_main.scss
@@ -265,12 +265,6 @@ width: 100%;
         gap: 7rem;
     }
 }
-@media (max-width: 380px) and (min-width: 1px){
-    .button__post{
-        display: none;
-    }
-   
-}
 /*sponsors cards section*/
 .section__navSide_sponsor_title1{
     background-color: rgb(255, 255, 255);
@@ -438,7 +432,7 @@ width: 100%;
         height: 1rem;
         margin-bottom: 2rem;
     }
-    #navlateralClose{
+    #navlateralClose_post{
         border: none;
         background: none;
         font-weight: bolder;
@@ -456,6 +450,17 @@ width: 100%;
     body.block{
         overflow-x:scroll;
         overflow-y:hidden;
+    }   
+}
+@media (max-width: 500px) and (min-width: 1px){
+    .button__post{
+        display: none;
+    }
+    .nav_bar{
+        padding: 0px 0px;
+    }
+    .nav_bar_conteriner_input{
+        gap: 0rem;
     }
 }
 /*menu login*/
