--- a/css/style_main.css
+++ b/css/style_main.css
@@ -522,7 +522,13 @@ body {
   border: thin solid 3px lightgrey;
 }
 
-.card__up {
+.conteiner_cards {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.card__main {
   background-color: rgb(255, 255, 255);
   border: 1px solid rgb(224, 224, 224);
   border-radius: 10px;
@@ -534,7 +540,7 @@ body {
   padding-bottom: 15px;
 }
 
-.card__up img {
+.card__main img {
   border-radius: 10px 10px 0px 0px;
   padding-left: 0px;
   width: 100%;
@@ -545,10 +551,12 @@ body {
   display: flex;
   padding-left: 23px;
   gap: 13px;
+  margin-top: 15px;
 }
 
 .user_card img {
-  width: 35px;
+  width: 45px;
+  border-radius: 100%;
 }
 
 .user_info p {
@@ -670,6 +678,10 @@ body {
   }
 }
 /*navside right*/
+.card__up__aside__right {
+  height: 196px;
+}
+
 .list-a li a {
   text-decoration: none;
   color: black;
@@ -687,4 +699,8 @@ body {
   text-decoration: none;
   color: black;
   font-weight: bold;
+}
+
+.text-primary {
+  cursor: pointer;
 }/*# sourceMappingURL=style_main.css.map */
